[package]
name = "process-dashboard-api"
version = "0.1.0"
edition = "2024"

[dependencies]
dashboard-shared = { path = "../shared" }
axum = { version = "0.8", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-stream = { version = "0.1", features = ["sync"] }
